Aplicando os principios de SRP e OCP do Solid